<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@color/background"
        android:layout_height="wrap_content"
        tools:context=".login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fasting_glucose"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_glucose_value"
                android:textSize="30sp"/>
            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_70_to_99_mg_dl"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10sp"
                />
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/_100_to_125_mg_dl"
                android:textSize="20sp"
                />
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/_126_mg_dl"
                android:textSize="20sp"
                />
        </RadioGroup>

        <Button
            android:id="@+id/getBtn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_result"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_result"
            />
        <TextView
            android:id="@+id/tv4"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_menu"/>

    </LinearLayout>
</ScrollView>