<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/background"
        tools:context=".Menu">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diabetes"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="40sp"
            />
        <Button
            android:id="@+id/heart_btn"
            android:text="@string/fasting_glucose"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:layout_marginTop="20dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="btn_fasting"
            />
        <Button
            android:id="@+id/calorie_btn"
            android:text="@string/random_glucose"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:layout_marginTop="20dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="btn_random"
            />
        <Button
            android:id="@+id/blood_btn"
            android:text="@string/hemoglobina1c"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:layout_marginTop="20dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="btn_machine"
            />
        <Button
            android:id="@+id/tips_btn"
            android:text="@string/from_bmi"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:layout_marginTop="20dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="btn_withoutmachine"
            />
        <Button
            android:id="@+id/diabetes_btn"
            android:text="@string/main_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:layout_marginTop="20dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="btn_menu"
            />

    </LinearLayout>
</ScrollView>