<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@color/background"
        android:layout_height="wrap_content"
        tools:context=".Diabetes">

        <TextView
            android:text="@string/bmi_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center_horizontal" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textSize="20sp"/>
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10sp"
                />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:text="Female"
                android:textSize="20sp"
                />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pregnancy"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="AGE"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Glucose"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight In Kg"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height In Centimeter"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Diastolic blood pressure"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="1sp"
            android:text="*Normal Glucose : Fasting 80-100 , Just Ate 170-200 , 3 Hours After Eating 120-140*"
            android:textSize="18dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="1sp"
            android:text="*BP : Normal 80 and less , Stage 1 80-89 , High Bp 90 and above , Hypertensive 120 and above*"
            android:textSize="18dp" />

        <Button
            android:id="@+id/ib1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textSize="20sp"
            android:layout_marginTop="1dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_calculate"
            />
        <!-- main menu-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_menu"/>
        <!-- Diabetes-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round"
            android:textColor="#fff"
            android:onClick="btn_diabetes"/>

        <!-- Text view for showing result -->
    </LinearLayout>
</ScrollView>